--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 简介与传送门</a><ul>
-<li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#简介"><i class="fa fa-check"></i><b>1.1</b> 简介</a></li>
+<li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#简介"><i class="fa fa-check"></i><b>1.1</b> 简介</a><ul>
+<li class="chapter" data-level="1.1.1" data-path="index.html"><a href="index.html#软件准备"><i class="fa fa-check"></i><b>1.1.1</b> 软件准备</a></li>
+</ul></li>
+<li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#传送门"><i class="fa fa-check"></i><b>1.2</b> 传送门</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html"><i class="fa fa-check"></i><b>2</b> 第二章 计量资料的统计描述</a><ul>
 <li class="chapter" data-level="2.1" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#描述统计"><i class="fa fa-check"></i><b>2.1</b> 描述统计</a></li>
@@ -219,14 +222,22 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 作者：wxhyihuan</p>
 <div id="简介" class="section level2">
 <h2><span class="header-section-number">1.1</span> 简介</h2>
-<p>这份笔记主要是学习孙振球，徐勇勇老师的&lt;<医学统计学>&gt; 第4版的过程中，尽量使用编程语言R对书中的示例进行实现的记录，
-并用<a href="https://github.com/rstudio/bookdown">Bookdown</a>形成此文档。</p>
-<p>如果这份文档对您有所助益，或者您对文档有疑问或建议，您可以 <strong><a href="mailto:wxh244295043@gamil.com">邮件</a></strong> 告知我。</p>
-<p>建议您购买原版教材学习，您也可以在网络上找到电子书方便参考。</p>
+<p>这份笔记主要是我个人在学习孙振球，徐勇勇老师的&lt;<医学统计学>&gt; 第4版的过程中，尽量使用编程语言R对书中的示例进行实现的记录，
+并用<a href="https://github.com/rstudio/bookdown">Bookdown</a>形成的。</p>
 <pre><code>&lt;&lt;医学统计学&gt;&gt; 孙振球, 徐勇勇. 第4版[M]. 人民卫生出版社, 2014.
 </code></pre>
-<p><img src="image/Ms_logo.jpg" width="25%" style="display: block; margin: auto;" /></p>
-<p>本文档中联系使用到的软件 <a href="https://www.r-project.org/">R</a> 版本是4.0.3, 和 <a href="https://rstudio.com/">RStudio</a>，版本是 1.3.1093 .</p>
+<p><img src="image/Ms_logo.jpg" width="25%" style="display: block; margin: auto;" />
+虽然在学习，整理过程中尽量将笔记的形式，内容结构进行力所能及的梳理，这里要特别感谢在学习过程中，在网络上找到的一些参考资料带来的帮助，然后将一些
+示例与原书进行对照，以避免一些学习错误，但个人能力和精力实在有限，也容易会有理解错误，表述不当，内容专业的错误，
+如果您在参考的过程中，发现了这样的错误，请您尽量可以告诉我，我会确认并努力修正。如果您对文档有疑问或建议，可以 <strong><a href="mailto:wxh244295043@gamil.com">邮件</a></strong> 告知我。</p>
+<p>建议您购买原版教材结合本笔记学习，您也可以在网络上找到电子书方便参考。</p>
+<p>形成此文档对我来讲是一个很大的挑战，需要耗费巨大精力。另外，因本人生患病，难以像以前正常工作，所以也是以此方式
+保持学习能力，和提升自己。希望这份文档能对您有所助益，如果正是如此，您可以捐助我，这里先谢过鼓励和支持的朋友~</p>
+<p>最后，祝愿来过此处的你我他！￣▽￣</p>
+<p><img src="image/SponsorshipFig.png" width="50%" style="display: block; margin: auto;" /></p>
+<div id="软件准备" class="section level3">
+<h3><span class="header-section-number">1.1.1</span> 软件准备</h3>
+<p>本文档使用到的主要软件 <a href="https://www.r-project.org/">R</a>版本是4.0.3, 和 <a href="https://rstudio.com/">RStudio</a>，版本是 1.3.1093 .</p>
 <p>如果您R语言的新手，您可以在下面找到一些快速学习的资料：</p>
 <ol style="list-style-type: decimal">
 <li><a href="https://rstudio.com/resources/cheatsheets/">RStudio Cheatsheets</a></li>
@@ -249,6 +260,19 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <span id="cb2-15"><a href="index.html#cb2-15"></a><span class="co">##  [1] compiler_4.0.3  bookdown_0.21   htmltools_0.5.0 tools_4.0.3    </span></span>
 <span id="cb2-16"><a href="index.html#cb2-16"></a><span class="co">##  [5] yaml_2.2.1      tinytex_0.27    rmarkdown_2.5   knitr_1.30     </span></span>
 <span id="cb2-17"><a href="index.html#cb2-17"></a><span class="co">##  [9] digest_0.6.27   xfun_0.19       rlang_0.4.8     evaluate_0.14  </span></span></code></pre></div>
+</div>
+</div>
+<div id="传送门" class="section level2">
+<h2><span class="header-section-number">1.2</span> 传送门</h2>
+<p>如果您希望快速找到R处理数据的方法，可以通过下面几张插图里面的传送门进行传送。<font color="red">注意的是</font>，似乎Rmarkdown里面对
+插图中包含链接展示无法很好支持，所以你需要 <em>“右击”</em>插图，选择在 <em>“新标签页打开图片”</em>，然后新标页签打开的图片
+包含有超链接，可以帮您快去找到合适的章节。</p>
+<div class="figure" style="text-align: left"><span id="fig:Gateway1"></span>
+<img src="image/ChoiceStatisticalMethods.svg" alt="完全随机设计的统计方法选择思路(目前, 传送门还不完整，在随书更新ing)" width="90%" />
+<p class="caption">
+Figure 1.1: 完全随机设计的统计方法选择思路(目前, 传送门还不完整，在随书更新ing)
+</p>
+</div>
 
 </div>
 </div>
