--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h2><span class="header-section-number">1.2</span> 传送门</h2>
 <p>如果您希望快速找到R处理数据的方法，可以通过下面几张插图里面的传送门进行传送。<font color="red">注意的是</font>，似乎Rmarkdown里面对
 插图中包含链接展示无法很好支持，所以你需要 <em>“右击”</em>插图，选择在 <em>“新标签页打开图片”</em>，然后新标页签打开的图片
-包含有超链接，可以帮您快去找到合适的章节。</p>
+包含有超链接，可以帮您快速找到合适的章节。</p>
 <div class="figure" style="text-align: left"><span id="fig:Gateway1"></span>
 <img src="image/ChoiceStatisticalMethods.svg" alt="完全随机设计的统计方法选择思路(目前, 传送门还不完整，在随书更新ing)" width="90%" />
 <p class="caption">
