--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.4.1" data-path="第三章-总体均数的估计与假设检验.html"><a href="第三章-总体均数的估计与假设检验.html#对数变换"><i class="fa fa-check"></i><b>3.4.1</b> 对数变换</a></li>
 </ul></li>
 </ul></li>
+<li class="chapter" data-level="4" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html"><i class="fa fa-check"></i><b>4</b> 第四章 多个样本均数比较的方差分析</a><ul>
+<li class="chapter" data-level="4.1" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html#方差分析"><i class="fa fa-check"></i><b>4.1</b> 方差分析</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html#f分布"><i class="fa fa-check"></i><b>4.1.1</b> <em>F</em>分布</a></li>
+<li class="chapter" data-level="4.1.2" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html#f检验的分类原理及应用"><i class="fa fa-check"></i><b>4.1.2</b> F检验的分类、原理及应用</a></li>
+<li class="chapter" data-level="4.1.3" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html#完全随机设计资料的方差分析"><i class="fa fa-check"></i><b>4.1.3</b> 完全随机设计资料的方差分析</a></li>
+</ul></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -266,7 +273,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h2><span class="header-section-number">1.2</span> 传送门</h2>
 <p>如果您希望快速找到R处理数据的方法，可以通过下面几张插图里面的传送门进行传送。<font color="red">注意的是</font>，似乎Rmarkdown里面对
 插图中包含链接展示无法很好支持，所以你需要 <em>“右击”</em>插图，选择在 <em>“新标签页打开图片”</em>，然后新标页签打开的图片
-包含有超链接，可以帮您快去找到合适的章节。</p>
+包含有超链接，可以帮您快速找到合适的章节。</p>
 <div class="figure" style="text-align: left"><span id="fig:Gateway1"></span>
 <img src="image/ChoiceStatisticalMethods.svg" alt="完全随机设计的统计方法选择思路(目前, 传送门还不完整，在随书更新ing)" width="90%" />
 <p class="caption">
