--- a/第二章-计量资料的统计描述.html
+++ b/第二章-计量资料的统计描述.html
@@ -194,6 +194,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.4.1" data-path="第三章-总体均数的估计与假设检验.html"><a href="第三章-总体均数的估计与假设检验.html#对数变换"><i class="fa fa-check"></i><b>3.4.1</b> 对数变换</a></li>
 </ul></li>
 </ul></li>
+<li class="chapter" data-level="4" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html"><i class="fa fa-check"></i><b>4</b> 第四章 多个样本均数比较的方差分析</a><ul>
+<li class="chapter" data-level="4.1" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html#方差分析"><i class="fa fa-check"></i><b>4.1</b> 方差分析</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html#f分布"><i class="fa fa-check"></i><b>4.1.1</b> <em>F</em>分布</a></li>
+<li class="chapter" data-level="4.1.2" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html#f检验的分类原理及应用"><i class="fa fa-check"></i><b>4.1.2</b> F检验的分类、原理及应用</a></li>
+<li class="chapter" data-level="4.1.3" data-path="第四章-多个样本均数比较的方差分析.html"><a href="第四章-多个样本均数比较的方差分析.html#完全随机设计资料的方差分析"><i class="fa fa-check"></i><b>4.1.3</b> 完全随机设计资料的方差分析</a></li>
+</ul></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -236,188 +243,188 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <caption><span id="tab:tab1">Table 2.1: </span>某医院用随机抽样的方法检测了138名正常成年女子的红细胞数目(RBC， <span class="math inline">\(*10^{12}/L\)</span>),其测量结果如下表：</caption>
 <thead>
 <tr class="header">
-<th align="right">V1</th>
-<th align="right">V2</th>
-<th align="right">V3</th>
-<th align="right">V4</th>
-<th align="right">V5</th>
-<th align="right">V6</th>
-<th align="right">V7</th>
-<th align="right">V8</th>
-<th align="right">V9</th>
-<th align="right">V10</th>
-<th align="right">V11</th>
-<th align="right">V12</th>
+<th align="center">V1</th>
+<th align="center">V2</th>
+<th align="center">V3</th>
+<th align="center">V4</th>
+<th align="center">V5</th>
+<th align="center">V6</th>
+<th align="center">V7</th>
+<th align="center">V8</th>
+<th align="center">V9</th>
+<th align="center">V10</th>
+<th align="center">V11</th>
+<th align="center">V12</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">3.96</td>
-<td align="right">4.23</td>
-<td align="right">4.42</td>
-<td align="right">3.59</td>
-<td align="right">5.12</td>
-<td align="right">4.02</td>
-<td align="right">4.32</td>
-<td align="right">3.72</td>
-<td align="right">4.76</td>
-<td align="right">4.16</td>
-<td align="right">4.61</td>
-<td align="right">4.26</td>
+<td align="center">3.96</td>
+<td align="center">4.23</td>
+<td align="center">4.42</td>
+<td align="center">3.59</td>
+<td align="center">5.12</td>
+<td align="center">4.02</td>
+<td align="center">4.32</td>
+<td align="center">3.72</td>
+<td align="center">4.76</td>
+<td align="center">4.16</td>
+<td align="center">4.61</td>
+<td align="center">4.26</td>
 </tr>
 <tr class="even">
-<td align="right">3.77</td>
-<td align="right">4.20</td>
-<td align="right">4.36</td>
-<td align="right">3.07</td>
-<td align="right">4.89</td>
-<td align="right">3.97</td>
-<td align="right">4.28</td>
-<td align="right">3.64</td>
-<td align="right">4.66</td>
-<td align="right">4.04</td>
-<td align="right">4.55</td>
-<td align="right">4.25</td>
+<td align="center">3.77</td>
+<td align="center">4.20</td>
+<td align="center">4.36</td>
+<td align="center">3.07</td>
+<td align="center">4.89</td>
+<td align="center">3.97</td>
+<td align="center">4.28</td>
+<td align="center">3.64</td>
+<td align="center">4.66</td>
+<td align="center">4.04</td>
+<td align="center">4.55</td>
+<td align="center">4.25</td>
 </tr>
 <tr class="odd">
-<td align="right">4.63</td>
-<td align="right">3.91</td>
-<td align="right">4.41</td>
-<td align="right">3.52</td>
-<td align="right">5.03</td>
-<td align="right">4.01</td>
-<td align="right">4.30</td>
-<td align="right">4.19</td>
-<td align="right">4.75</td>
-<td align="right">4.14</td>
-<td align="right">4.57</td>
-<td align="right">4.26</td>
+<td align="center">4.63</td>
+<td align="center">3.91</td>
+<td align="center">4.41</td>
+<td align="center">3.52</td>
+<td align="center">5.03</td>
+<td align="center">4.01</td>
+<td align="center">4.30</td>
+<td align="center">4.19</td>
+<td align="center">4.75</td>
+<td align="center">4.14</td>
+<td align="center">4.57</td>
+<td align="center">4.26</td>
 </tr>
 <tr class="even">
-<td align="right">4.56</td>
-<td align="right">3.79</td>
-<td align="right">3.89</td>
-<td align="right">4.21</td>
-<td align="right">4.95</td>
-<td align="right">3.98</td>
-<td align="right">4.29</td>
-<td align="right">3.67</td>
-<td align="right">4.69</td>
-<td align="right">4.12</td>
-<td align="right">4.56</td>
-<td align="right">4.26</td>
+<td align="center">4.56</td>
+<td align="center">3.79</td>
+<td align="center">3.89</td>
+<td align="center">4.21</td>
+<td align="center">4.95</td>
+<td align="center">3.98</td>
+<td align="center">4.29</td>
+<td align="center">3.67</td>
+<td align="center">4.69</td>
+<td align="center">4.12</td>
+<td align="center">4.56</td>
+<td align="center">4.26</td>
 </tr>
 <tr class="odd">
-<td align="right">4.66</td>
-<td align="right">4.28</td>
-<td align="right">3.83</td>
-<td align="right">4.20</td>
-<td align="right">5.24</td>
-<td align="right">4.02</td>
-<td align="right">4.33</td>
-<td align="right">3.76</td>
-<td align="right">4.81</td>
-<td align="right">4.17</td>
-<td align="right">3.96</td>
-<td align="right">3.27</td>
+<td align="center">4.66</td>
+<td align="center">4.28</td>
+<td align="center">3.83</td>
+<td align="center">4.20</td>
+<td align="center">5.24</td>
+<td align="center">4.02</td>
+<td align="center">4.33</td>
+<td align="center">3.76</td>
+<td align="center">4.81</td>
+<td align="center">4.17</td>
+<td align="center">3.96</td>
+<td align="center">3.27</td>
 </tr>
 <tr class="even">
-<td align="right">4.61</td>
-<td align="right">4.26</td>
-<td align="right">3.96</td>
-<td align="right">4.23</td>
-<td align="right">3.76</td>
-<td align="right">4.01</td>
-<td align="right">4.29</td>
-<td align="right">3.67</td>
-<td align="right">3.39</td>
-<td align="right">4.12</td>
-<td align="right">4.27</td>
-<td align="right">3.61</td>
+<td align="center">4.61</td>
+<td align="center">4.26</td>
+<td align="center">3.96</td>
+<td align="center">4.23</td>
+<td align="center">3.76</td>
+<td align="center">4.01</td>
+<td align="center">4.29</td>
+<td align="center">3.67</td>
+<td align="center">3.39</td>
+<td align="center">4.12</td>
+<td align="center">4.27</td>
+<td align="center">3.61</td>
 </tr>
 <tr class="odd">
-<td align="right">4.98</td>
-<td align="right">4.24</td>
-<td align="right">3.83</td>
-<td align="right">4.20</td>
-<td align="right">3.71</td>
-<td align="right">4.03</td>
-<td align="right">4.34</td>
-<td align="right">4.69</td>
-<td align="right">3.62</td>
-<td align="right">4.18</td>
-<td align="right">4.26</td>
-<td align="right">4.36</td>
+<td align="center">4.98</td>
+<td align="center">4.24</td>
+<td align="center">3.83</td>
+<td align="center">4.20</td>
+<td align="center">3.71</td>
+<td align="center">4.03</td>
+<td align="center">4.34</td>
+<td align="center">4.69</td>
+<td align="center">3.62</td>
+<td align="center">4.18</td>
+<td align="center">4.26</td>
+<td align="center">4.36</td>
 </tr>
 <tr class="even">
-<td align="right">5.28</td>
-<td align="right">4.21</td>
-<td align="right">4.42</td>
-<td align="right">4.36</td>
-<td align="right">3.66</td>
-<td align="right">4.02</td>
-<td align="right">4.31</td>
-<td align="right">4.83</td>
-<td align="right">3.59</td>
-<td align="right">3.97</td>
-<td align="right">3.96</td>
-<td align="right">4.49</td>
+<td align="center">5.28</td>
+<td align="center">4.21</td>
+<td align="center">4.42</td>
+<td align="center">4.36</td>
+<td align="center">3.66</td>
+<td align="center">4.02</td>
+<td align="center">4.31</td>
+<td align="center">4.83</td>
+<td align="center">3.59</td>
+<td align="center">3.97</td>
+<td align="center">3.96</td>
+<td align="center">4.49</td>
 </tr>
 <tr class="odd">
-<td align="right">5.11</td>
-<td align="right">4.20</td>
-<td align="right">4.36</td>
-<td align="right">4.54</td>
-<td align="right">3.72</td>
-<td align="right">3.97</td>
-<td align="right">4.28</td>
-<td align="right">4.76</td>
-<td align="right">3.21</td>
-<td align="right">4.04</td>
-<td align="right">4.56</td>
-<td align="right">4.25</td>
+<td align="center">5.11</td>
+<td align="center">4.20</td>
+<td align="center">4.36</td>
+<td align="center">4.54</td>
+<td align="center">3.72</td>
+<td align="center">3.97</td>
+<td align="center">4.28</td>
+<td align="center">4.76</td>
+<td align="center">3.21</td>
+<td align="center">4.04</td>
+<td align="center">4.56</td>
+<td align="center">4.25</td>
 </tr>
 <tr class="even">
-<td align="right">4.92</td>
-<td align="right">4.23</td>
-<td align="right">4.47</td>
-<td align="right">3.60</td>
-<td align="right">5.23</td>
-<td align="right">4.02</td>
-<td align="right">4.32</td>
-<td align="right">4.68</td>
-<td align="right">4.76</td>
-<td align="right">3.69</td>
-<td align="right">4.61</td>
-<td align="right">4.26</td>
+<td align="center">4.92</td>
+<td align="center">4.23</td>
+<td align="center">4.47</td>
+<td align="center">3.60</td>
+<td align="center">5.23</td>
+<td align="center">4.02</td>
+<td align="center">4.32</td>
+<td align="center">4.68</td>
+<td align="center">4.76</td>
+<td align="center">3.69</td>
+<td align="center">4.61</td>
+<td align="center">4.26</td>
 </tr>
 <tr class="odd">
-<td align="right">3.89</td>
-<td align="right">4.21</td>
-<td align="right">4.36</td>
-<td align="right">3.42</td>
-<td align="right">5.01</td>
-<td align="right">4.01</td>
-<td align="right">4.29</td>
-<td align="right">3.68</td>
-<td align="right">4.71</td>
-<td align="right">4.13</td>
-<td align="right">4.57</td>
-<td align="right">4.26</td>
+<td align="center">3.89</td>
+<td align="center">4.21</td>
+<td align="center">4.36</td>
+<td align="center">3.42</td>
+<td align="center">5.01</td>
+<td align="center">4.01</td>
+<td align="center">4.29</td>
+<td align="center">3.68</td>
+<td align="center">4.71</td>
+<td align="center">4.13</td>
+<td align="center">4.57</td>
+<td align="center">4.26</td>
 </tr>
 <tr class="even">
-<td align="right">4.03</td>
-<td align="right">5.46</td>
-<td align="right">4.16</td>
-<td align="right">3.64</td>
-<td align="right">4.16</td>
-<td align="right">3.76</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
-<td align="right">NA</td>
+<td align="center">4.03</td>
+<td align="center">5.46</td>
+<td align="center">4.16</td>
+<td align="center">3.64</td>
+<td align="center">4.16</td>
+<td align="center">3.76</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
 </tr>
 </tbody>
 </table>
