--- a/index.html
+++ b/index.html
@@ -166,7 +166,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.5.3" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#正态分位函数qnorm"><i class="fa fa-check"></i><b>2.5.3</b> 正态分位函数qnorm()</a></li>
 <li class="chapter" data-level="2.5.4" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#生成正态分布函数rnorm"><i class="fa fa-check"></i><b>2.5.4</b> 生成正态分布函数rnorm()</a></li>
 </ul></li>
-<li class="chapter" data-level="2.6" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#正态分布检验"><i class="fa fa-check"></i><b>2.6</b> 正态分布检验</a></li>
+<li class="chapter" data-level="2.6" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#正态分布检验"><i class="fa fa-check"></i><b>2.6</b> 正态分布检验</a><ul>
+<li class="chapter" data-level="2.6.1" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#直方图"><i class="fa fa-check"></i><b>2.6.1</b> 直方图</a></li>
+<li class="chapter" data-level="2.6.2" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#概率密度图"><i class="fa fa-check"></i><b>2.6.2</b> 概率密度图</a></li>
+<li class="chapter" data-level="2.6.3" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#qq-plot"><i class="fa fa-check"></i><b>2.6.3</b> QQ-plot</a></li>
+<li class="chapter" data-level="2.6.4" data-path="第二章-计量资料的统计描述.html"><a href="第二章-计量资料的统计描述.html#正态检验"><i class="fa fa-check"></i><b>2.6.4</b> 正态检验</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="第三章-总体均数的估计与假设检验.html"><a href="第三章-总体均数的估计与假设检验.html"><i class="fa fa-check"></i><b>3</b> 第三章 总体均数的估计与假设检验</a><ul>
 <li class="chapter" data-level="3.1" data-path="第三章-总体均数的估计与假设检验.html"><a href="第三章-总体均数的估计与假设检验.html#推论统计"><i class="fa fa-check"></i><b>3.1</b> 推论统计</a><ul>
@@ -271,8 +276,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="传送门" class="section level2">
 <h2><span class="header-section-number">1.2</span> 传送门</h2>
 <p>如果您希望快速找到R处理数据的方法，可以通过下面几张插图里面的传送门进行传送。<font color="red">注意的是</font>，似乎Rmarkdown里面对
-插图中包含链接展示无法很好支持，所以你需要 <em>“右击”</em>插图，选择在 <em>“新标签页打开图片”</em>，然后新标页签打开的图片
-包含有超链接，可以帮您快速找到合适的章节。</p>
+SVG插图中包含链接展示无法支持，所以你可以</p>
+<ol style="list-style-type: decimal">
+<li><em>“右击”</em>插图，选择在 <em>“新标签页打开图片”</em>，然后新标页签打开的图片。这样可以找到图片中包含的超链接，快速找到合适的章节内容。</li>
+<li><em>“右击”</em>插图，选择在 <em>“图片另存为”</em>，这样包含的超链接图片保存下来，可以在需要的时候快速找到合适的章节内容。</li>
+</ol>
 <div class="figure" style="text-align: left"><span id="fig:Gateway1"></span>
 <img src="image/ChoiceStatisticalMethods.svg" alt="完全随机设计的统计方法选择思路(目前, 传送门还不完整，在随书更新ing)" width="90%" />
 <p class="caption">
